temp fix for horizontal scrollbar in send a message

--- a/application/frontend/src/components/Modals/SendAMessage.module.css
+++ b/application/frontend/src/components/Modals/SendAMessage.module.css
@@ -1,10 +1,11 @@
 .sendAMessage-header{
-    /* margin-left: 30px; */
+    margin-left: 30px;
     font-weight: 600;
 }
 
 .sendAMessage-body{
     /* margin: 0 60px 0 30px; */
+    margin-left: 30px;
     width: 95%;
     height: 70%;
     resize: none;
@@ -13,13 +14,13 @@
 }
 
 .sendAMessage-subject{
-    /* margin-left: 30px; */
+    margin-left: 30px;
     margin-bottom: 20px;
 }
 
 .sendAMessage-sendButton{
     float: right;
-    /* margin-right: 60px; */
+    margin-right: 45px;
     background-color: var(--primary-clr);
     margin-top: 20px;
     color: white;
